# dropout-dl

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  main.cpp  readme.md
.github/workflows/: docker-image.yml  dropoutdl.yml
assets/: dropout_dl_logo.xcf
src/: color.h  cookie.cpp  cookie.h  episode.cpp  episode.h  login.cpp  login.h  main.cpp  season.cpp  season.h  series.cpp  series.h  util.cpp  util.h
tests/: CMakeLists.txt  episode.cpp  episode_tests.cpp  episode_tests.h  series_tests.cpp  series_tests.h  test.cpp  test.h
